--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,6 @@ classifiers = [
   "Intended Audience :: Researchers",
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
-  "Operating System :: OS Independent",
 ]
 
 keywords = ["state machine", "experiments"]
@@ -32,11 +31,11 @@ Tracker = "https://github.com/compmem/smile/issues"
 
 [tool.setuptools.package-data]
 smile = [
-    "face-smile.png",
-    "logo.png",
-    "test_sound.wav",
-    "test_video.mp4",
-    "lock.png",
-    "unlock.png",
-    "crosshairs*"
+  "face-smile.png",
+  "logo.png",
+  "test_sound.wav",
+  "test_video.mp4",
+  "lock.png",
+  "unlock.png",
+  "crosshairs*",
 ]
